Fix notification popup icons not showing

--- a/src/scss/recit/_navbar.scss
+++ b/src/scss/recit/_navbar.scss
@@ -83,3 +83,7 @@ nav.navbar {
         }
     }
 }
+
+.navbar-dark .popover-region-header-actions .icon {
+    color: #000 !important;
+}
